--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.0",
+    "docx": "^9.5.1",
     "echarts": "^5.5.0",
     "element-plus": "^2.7.0",
+    "file-saver": "^2.0.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@vitejs/plugin-vue": "^5.0.0",
     "sass-embedded": "^1.97.3",
     "vite": "^5.0.0"
