--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.5.0",
     "element-plus": "^2.7.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
